自定义的样式

--- a/source/css/_variables/base.styl
+++ b/source/css/_variables/base.styl
@@ -23,6 +23,8 @@ $blue-bright  = #87daff
 $blue         = #0684bd
 $blue-deep    = #262a30
 $orange       = #fc6423
+$logo-color   = #FF7E67
+$green        = #5EB95E
 
 
 
@@ -154,10 +156,10 @@ $code-border-radius             = 3px
 $btn-font-weight                = normal
 
 $btn-default-radius             = 0
-$btn-default-bg                 = $black-deep
+$btn-default-bg                 = $green
 $btn-default-color              = white
 $btn-default-font-size          = 14px
-$btn-default-border-width       = 2px
+$btn-default-border-width       = 0
 $btn-default-border-color       = $black-deep
 $btn-default-hover-bg           = white
 $btn-default-hover-color        = $black-deep
@@ -204,7 +206,7 @@ $gap-between-main-and-footer    = 100px
 
 // Headband
 // --------------------------------------------------
-$headband-height                = 3px
+$headband-height                = 0
 $headband-bg                    = $black-deep
 
 
