--- a/source/css/_variables/Pisces.styl
+++ b/source/css/_variables/Pisces.styl
@@ -56,7 +56,7 @@ $toc-link-active-current-border-color = $sidebar-highlight
 
 // Button
 $read-more-color              = $text-color
-$read-more-bg-color           = white
+$read-more-bg-color           = $green
 $read-more-border-radius      = 2px
 $btn-default-border-color     = $text-color
 $btn-default-hover-color      = white
